1. Slight wording changes to introSection 2. Changes to HTML structure in introSection 3. Added short paragraph of experience/interest details after h1 tag in introSection 4. Added CSS main file 5. Added new style to overall document 6. added style to introSection: padding, margins, font-size 7. CSS style beginning as mobile first

--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>scottRJworks</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Scott RJ Portfolio</title>
 </head>
 <body>
 
     <header>
-        <div class="viewing_section">
-            
-        </div>
+        
     </header>
 
     <section class="viewing_section" id="introSection">
         <div class="viewing_box" id="introBox">
-            <h1>Scott Law, programmer of things, aspiring developer</h1>
+            <h1>
+                <span>Scott Law,</span><br>
+                <span>aspiring developer,</span><br>
+                <span>programmer of things</span><br>
+            </h1>
+            <p>
+                Software Engineering<br>
+                Mathematics & Statistics<br>
+                Modelling
+            </p>
         </div>
     </section>
 
@@ -52,7 +60,7 @@
     <section class="viewing_section" id="portfolioSection">
         <div class="viewing_box" id="portfolioBox">
             <div class="portfolio_sub_box">
-                <h2>A little on my portfolio</h2>
+                <h2>A little of my portfolio</h2>
                 <p>My main experience so far lies in front-end web development. I have used HTML, CSS and JavaScript to make simple websites to show case programming skills we have learnt in class</p>
                 <p>As my course has progressed my skills have extended to learning the linux operating system, bash scripting, C++ and object orietated programming</p>
                 <p>Future courses will develop skills in computational thinking using python, as well understanding programming data structures and the algorithms that can manipulate and search those data structures.</p>
