ACTION: ADD -list of languages with SVG/PNG images implemented in skills section for small screen size.

--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
                 <p>As my course has progressed my skills have extended to learning the linux operating system, bash scripting, C++ and object orietated programming</p>
                 <p>Future courses will develop skills in computational thinking using python, as well understanding programming data structures and the algorithms that can manipulate and search those data structures.</p>
             </div>
-            <div class="skills_sub_box">
-                <ul>
-                    <li>C++</li>
-                    <li>JavaScript</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Python</li>                    
-                </ul>
+            <div class="skills_sub_box" id="skillList">
+                    <div class="skill_list_left"><img class="lang_logo" src="images/html5_logo.svg" atl="HTML5 Logo"><p>HTML5</p></div>
+                    <div class="skill_list_right"><img class="lang_logo" src="images/css3_logo.svg" atl="CSS3 Logo"><p>CSS3</p></div>
+                    <div class="skill_list_left"><img class="lang_logo" src="images/js_logo.svg" atl="JavaScript Logo"><p>JavaScript</p></div>
+                    <div class="skill_list_right"><img class="lang_logo" src="images/c_logo.png" atl="C Logo"><p>C</p></div>
+                    <div class="skill_list_left"><img class="lang_logo" src="images/cpp_logo.png" atl="C++ Logo"><p>C++</p></div>
+                    <div class="skill_list_right"><img class="lang_logo" src="images/java_logo.png" atl="Java Logo"><p>Java</p></div>
+                    <div class="skill_list_left"><img class="lang_logo" src="images/python_logo.png" atl="Python Logo"><p>Python</p></div>
+                    <div class="skill_list_right"><img class="lang_logo" src="images/jupyter_logo.png" atl="Jupyter Logo"><p>Jupyter</p></div>
             </div>
         </div>
     </section>
