ACTION: ADD -First iteration of navigation menu. Includes menu options and simple styling. Page hyperlinks include.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
 
     <header>
-        
+        <nav>
+            <a class="nav_burger" href="#"><img id="navBurgerSVG" src="images/hamburger-menu.svg"></a>
+            <a class="nav_item" href="#aboutmeSection">About</a>
+            <a class="nav_item" href="#skillsSection">Skills</a>
+            <a class="nav_item" href="#portfolioSection">Portfolio</a>
+            <a class="nav_item" href="#contactSection">Contact</a>
+        </nav>
     </header>
 
     <section class="viewing_section" id="introSection">
