changed java logo to sql logo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="skill_list_left"><img class="lang_logo" src="images/js_logo.svg" atl="JavaScript Logo"><p>JavaScript</p></div>
                     <div class="skill_list_right"><img class="lang_logo" src="images/c_logo.png" atl="C Logo"><p>C</p></div>
                     <div class="skill_list_left"><img class="lang_logo" src="images/cpp_logo.png" atl="C++ Logo"><p>C++</p></div>
-                    <div class="skill_list_right"><img class="lang_logo" src="images/java_logo.png" atl="Java Logo"><p>Java</p></div>
+                    <div class="skill_list_right"><img class="lang_logo" src="images/sql_logo.png" atl="SQL Logo"><p>SQL</p></div>
                     <div class="skill_list_left"><img class="lang_logo" src="images/python_logo.png" atl="Python Logo"><p>Python</p></div>
                     <div class="skill_list_right"><img class="lang_logo" src="images/jupyter_logo.png" atl="Jupyter Logo"><p>Jupyter</p></div>
             </div>
